// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryTable should render correctly - no data 1`] = `
<ForwardRef>
  <EntityTableToolbar
    activeFiltersConfig={Object {}}
    filters={Array []}
    hasAccess={true}
    hasItems={false}
    hideFilters={Object {}}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
    showTags={false}
  />
  <ForwardRef
    hasAccess={true}
    hasItems={false}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
  >
    <ContextInventoryList
      hasItems={false}
      ignoreRefresh={true}
      onRefreshData={[Function]}
      page={1}
      perPage={50}
    />
  </ForwardRef>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly - with no access 1`] = `
<ForwardRef
  hasAccess={false}
>
  <EntityTableToolbar
    activeFiltersConfig={Object {}}
    filters={Array []}
    hasAccess={false}
    hasItems={false}
    hideFilters={Object {}}
    loaded={true}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
    showTags={false}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
    total={500}
  />
  <ForwardRef
    hasAccess={false}
    hasItems={false}
    loaded={true}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
  >
    <div
      className="ins-c-inventory__no-access"
    >
      <AccessDenied
        description={
          <div>
            To view your systems, you must be granted inventory access from your Organization Administrator.
          </div>
        }
        showReturnButton={false}
        title="You do not have access to Inventory"
      />
    </div>
  </ForwardRef>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly - with no access and full view 1`] = `
<ForwardRef
  hasAccess={false}
  isFullView={true}
>
  <AccessDenied
    description={
      <div>
        To view the content of this page, you must be granted a minimum of inventory permissions from your Organization Administrator.
      </div>
    }
    title="This application requires Inventory permissions"
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly 1`] = `
<ForwardRef>
  <EntityTableToolbar
    activeFiltersConfig={Object {}}
    filters={Array []}
    hasAccess={true}
    hasItems={false}
    hideFilters={Object {}}
    loaded={true}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
    showTags={false}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
    total={500}
  />
  <ForwardRef
    hasAccess={true}
    hasItems={false}
    loaded={true}
    onRefreshData={[Function]}
    page={1}
    perPage={50}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
  >
    <ContextInventoryList
      activeFilters={
        Array [
          Object {},
          Object {
            "filter": "",
            "value": "hostname_or_id",
          },
        ]
      }
      hasItems={false}
      ignoreRefresh={true}
      loaded={true}
      onRefreshData={[Function]}
      page={1}
      perPage={50}
      sortBy={
        Object {
          "direction": "asc",
          "index": 1,
          "key": "one",
        }
      }
    />
  </ForwardRef>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly with custom error 1`] = `
<ForwardRef
  errorState={
    <div>
      CUSTOM ERROR STATE
    </div>
  }
>
  <div>
    CUSTOM ERROR STATE
  </div>
</ForwardRef>
`;

exports[`InventoryTable should render correctly with error 1`] = `
<ForwardRef>
  <ErrorState
    errorTitle="Something went wrong"
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly with items 1`] = `
<ForwardRef
  items={
    Array [
      Object {
        "id": "someId",
      },
    ]
  }
  page={5}
  perPage={20}
  sortBy={
    Object {
      "direction": "asc",
      "index": 1,
      "key": "one",
    }
  }
  total={200}
>
  <EntityTableToolbar
    activeFiltersConfig={Object {}}
    filters={Array []}
    hasAccess={true}
    hasItems={true}
    hideFilters={Object {}}
    items={
      Array [
        Object {
          "id": "someId",
        },
      ]
    }
    loaded={true}
    onRefreshData={[Function]}
    page={5}
    perPage={20}
    showTags={false}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
    total={200}
  />
  <ForwardRef
    hasAccess={true}
    hasItems={true}
    items={
      Array [
        Object {
          "id": "someId",
        },
      ]
    }
    loaded={true}
    onRefreshData={[Function]}
    page={5}
    perPage={20}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
  >
    <ContextInventoryList
      activeFilters={
        Array [
          Object {},
          Object {
            "filter": "",
            "value": "hostname_or_id",
          },
        ]
      }
      hasItems={true}
      ignoreRefresh={true}
      items={
        Array [
          Object {
            "id": "someId",
          },
        ]
      }
      loaded={true}
      onRefreshData={[Function]}
      page={5}
      perPage={20}
      sortBy={
        Object {
          "direction": "asc",
          "index": 1,
          "key": "one",
        }
      }
    />
  </ForwardRef>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  />
</ForwardRef>
`;

exports[`InventoryTable should render correctly with items no totla 1`] = `
<ForwardRef
  items={
    Array [
      Object {
        "id": "someId",
      },
    ]
  }
  page={5}
  perPage={20}
  sortBy={
    Object {
      "direction": "asc",
      "index": 1,
      "key": "one",
    }
  }
>
  <EntityTableToolbar
    activeFiltersConfig={Object {}}
    filters={Array []}
    hasAccess={true}
    hasItems={true}
    hideFilters={Object {}}
    items={
      Array [
        Object {
          "id": "someId",
        },
      ]
    }
    loaded={true}
    onRefreshData={[Function]}
    page={5}
    perPage={20}
    showTags={false}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
    total={1}
  />
  <ForwardRef
    hasAccess={true}
    hasItems={true}
    items={
      Array [
        Object {
          "id": "someId",
        },
      ]
    }
    loaded={true}
    onRefreshData={[Function]}
    page={5}
    perPage={20}
    sortBy={
      Object {
        "direction": "asc",
        "index": 1,
        "key": "one",
      }
    }
  >
    <ContextInventoryList
      activeFilters={
        Array [
          Object {},
          Object {
            "filter": "",
            "value": "hostname_or_id",
          },
        ]
      }
      hasItems={true}
      ignoreRefresh={true}
      items={
        Array [
          Object {
            "id": "someId",
          },
        ]
      }
      loaded={true}
      onRefreshData={[Function]}
      page={5}
      perPage={20}
      sortBy={
        Object {
          "direction": "asc",
          "index": 1,
          "key": "one",
        }
      }
    />
  </ForwardRef>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  />
</ForwardRef>
`;
